# duckdb-wasm

./: .clang-format  .eslintrc.base.json  .gitattributes  .gitignore  .gitmodules  .prettierignore  .prettierrc  .prettierrc.js  CNAME  Cargo.toml  LICENSE  Makefile  README.md  build_macos.sh  codecov.yml  docker-compose.yml  duckdb.patch  duckdb_wasm_extension_config.cmake  extension_config_wasm.cmake  get-docker.sh  index.html  package.json  tsconfig.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/config/: extension_config_wasm.cmake
.github/workflows/: HighPriorityIssues.yml  InternalIssuesCreateMirror.yml  InternalIssuesUpdateMirror.yml  benchmarks.yml  cloud-runners.yml  main.yml  npm_tags.yml  self-hosted-runners.yml  self-hosted-runners.yml.disabled  wip.yml
actions/image/: Dockerfile  action.yml
actions/runner/: cloud-init.yaml  multipass.sh  ufw_before_rules.txt
assets/: duckdb-eh.js  duckdb.js  duckdb.wasm  worker.js
data/: .gitignore  benchmarks.arrow  benchmarks.csv  benchmarks.json  sqlite-tpch-schema.sql  test.csv  test.json
data/tpch/: .gitignore  convert.py
docs/: hierarchy.html  index.html
docs/assets/: hierarchy.js  main.js  navigation.js  search.js
docs/classes/: index.AsyncDuckDB.html  index.AsyncDuckDBConnection.html  index.AsyncDuckDBDispatcher.html  index.AsyncPreparedStatement.html  index.AsyncResultStreamIterator.html  index.ConsoleLogger.html  index.DuckDBBindings.html  index.DuckDBBindingsBase.html  index.DuckDBConnection.html  index.FileStatistics.html  index.PreparedStatement.html  index.ResultStreamIterator.html  index.VoidLogger.html  index.WorkerTask.html  targets_duckdb_browser_sync.DuckDB.html  targets_duckdb_node_sync.DuckDB.html
docs/enums/: index.DuckDBAccessMode.html  index.DuckDBDataProtocol.html  index.DuckDBFeature.html  index.FileFlags.html  index.InsertMode.html  index.JSONTableShape.html  index.LogEvent.html  index.LogLevel.html  index.LogOrigin.html  (+5 more)
duckdb_patches/: compiler_compat.absorbed.patch  duckdb.patch  extension_install_rework.patch  is_remote_file.absorbed.patch  remote_attach.partial.patch
lib/: .clang-format  .gitignore  CMakeLists.txt  README.md  base_exported_list.txt  js-stubs.js
lib/cmake/: arrow.cmake  benchmark.cmake  boost.cmake  duckdb.cmake  exported_functions  gflags.cmake  googletest.cmake  rapidjson.cmake  spdlog.cmake
lib/extension/: CMakeLists.template.txt  generated_custom_extensions_header.hpp.in
lib/include/duckdb/web/: arrow_bridge.h  arrow_casts.h  arrow_insert_options.h  arrow_stream_buffer.h  arrow_type_mapping.h  config.h  csv_insert_options.h  csv_table_options.h  debug.h  environment.h  http_wasm.h  insert.h  insert_options.h  json_analyzer.h  json_dataview.h  json_insert_options.h  json_parser.h  json_table.h  json_table_options.h  json_typedef.h  miniz_zipper.h  mutex.h  reservoir_sample.h  udf.h  wasm_response.h  webdb.h
lib/include/duckdb/web/experimental/: wire_serializer.h  wire_types.h
lib/include/duckdb/web/ext/: table_function_relation.h
lib/include/duckdb/web/extensions/: excel_extension.h  fts_extension.h  json_extension.h  parquet_extension.h
lib/include/duckdb/web/functions/: table_function_relation.h
lib/include/duckdb/web/io/: arrow_ifstream.h  buffered_filesystem.h  default_filesystem.h  file_page_buffer.h  file_page_defaults.h  file_stats.h  filesystem_buffer.h  glob.h  ifstream.h  memory_filesystem.h  readahead_buffer.h  web_filesystem.h
lib/include/duckdb/web/test/: config.h
lib/include/duckdb/web/utils/: debug.h  parallel.h  parking_lot.h  reservoir_sample.h  scope_guard.h  shared_mutex.h  spin_mutex.h  thread.h  wasm_response.h
lib/include/nonstd/: span.h
lib/src/: arrow_casts.cc  arrow_insert_options.cc  arrow_stream_buffer.cc  arrow_type_mapping.cc  config.cc  csv_insert_options.cc  csv_table_options.cc  http_wasm.cc  insert.cc  insert_options.cc  json_analyzer.cc  json_dataview.cc  json_insert_options.cc  json_parser.cc  json_table.cc  json_table_options.cc  json_typedef.cc  miniz_zipper.cc  udf.cc  wasm_main.cc  wasm_response.cc  webdb.cc  webdb_api.cc
lib/src/experimental/: experimental_api.cc  wire_serializer.cc
lib/src/ext/: table_function_relation.cc
lib/src/extensions/: excel_extension.cc  fts_extension.cc  json_extension.cc  parquet_extension.cc
lib/src/functions/: table_function_relation.cc
lib/src/io/: arrow_ifstream.cc  buffered_filesystem.cc  default_filesystem.cc  file_page_buffer.cc  file_stats.cc  filesystem.cc  filesystem_buffer.cc  glob.cc  ifstream.cc  memory_filesystem.cc  web_filesystem.cc
lib/src/utils/: parking_lot.cc  shared_mutex.cc  thread.cc  wasm_response.cc
lib/test/: all_types_test.cc  arrow_casts_test.cc  ast_test.cc  bugs_test.cc  file_page_buffer_test.cc  filesystem_buffer_test.cc  glob_test.cc  ifstream_test.cc  import_csv_test.cc  import_json_test.cc  import_parquet_test.cc  insert_arrow_test.cc  insert_csv_test.cc  insert_json_test.cc  json_analyzer_test.cc  json_dataview_test.cc  json_table_test.cc  json_typedef_test.cc  memory_filesystem_test.cc  miniz_zipper_test.cc  parquet_test.cc  prepared_statement_test.cc  readahead_buffer_test.cc  tablenames_test.cc  tester.cc  web_filesystem_test.cc  webdb_test.cc
misc/: duckdb_wasm.afdesign  duckdb_wasm_circle.afdesign
scripts/: build_duckdb_badge.sh  build_duckdb_shell.sh  build_loadable.sh  build_pages.sh  deploy_benchmarks.sh  deploy_pages.sh  deploy_web_shell.sh  format.sh  generate_benchmark_data.sh  generate_tpch.sh  generate_tpch_arrow.sh  generate_tpch_duckdb.sh  generate_tpch_raw.sh  generate_tpch_sqlite.sh  generate_tpch_tbl.sh  generate_uni.sh  npm_measure_lib.sh  npm_publish.sh  npm_publish_lib.sh  npm_publish_lib_wip.sh  npm_publish_react.sh  npm_publish_react_table.sh  npm_publish_shell.sh  npm_restore.sh  npm_version.sh  reset_pages_subtree.sh  run_clang_format.py  run_system_benchmarks.sh  sync_versions.mjs  tpch_dbgen.sh  tpch_parquet.py  wasm_build_lib.sh  wasm_transport_info.js
tools/dataprep/: Cargo.toml
tools/dataprep/src/: bench.rs  error.rs  main.rs  tpch.rs  uni.rs
(+452 files in other folders)
