[package]
name = "dataprep"
version = "0.1.0"
authors = ["Andre Kohn <kohn.a@outlook.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
parquet = "13.0.0"
arrow = { version = "13.0.0", features = ["csv", "ipc"] }
clap = "3.0.0-beta.2"
